fixed text not changing with dark mode

--- a/styles/main.css
+++ b/styles/main.css
@@ -4,7 +4,7 @@
 
 a {
     text-decoration: none;
-    color: #262626 !important;
+    color: #262626;
     font-weight: 500;
 }
 
